Bug 1104008 - Make sure the D3D11 swapchain's textures are cleared before resizing. r=Bas, a=sledru